crates/rome_js_formatter/tests/specs/prettier/typescript/class/abstract-method.ts.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
expression: abstract-method.ts
---
# Input
```js
class Foo {
  abstract foo();
}

abstract class Bar {
  method() {
    return class {
      abstract m();
    }
  }
}

```

# Output
```js
class Foo {
  abstract foo();
}

abstract class Bar {
  method() {
    return class {
      abstract m();
    };
  }
}

```

# Errors
```
error[SyntaxError]: Only abstract classes can have abstract members
  ┌─ abstract-method.ts:2:3
  │
2 │   abstract foo();
  │   ^^^^^^^^

error[SyntaxError]: Only abstract classes can have abstract members
  ┌─ abstract-method.ts:8:7
  │
8 │       abstract m();
  │       ^^^^^^^^


```


